Flashcards App Updates

--- a/Assignments/Flashcard App/Final/start.css
+++ b/Assignments/Flashcard App/Final/start.css
@@ -10,7 +10,7 @@ h1{
 	font-weight: bold;
 }
 
-form{
+#card{
 	margin-left: 400px;
 	margin-right: 350px;
 	padding: 30px;
@@ -21,11 +21,11 @@ form{
 	font-size: 25px;
 }
 	
-form p{
+#card label{
 	font-size: 14px;
 	color: #909090;
 }
-button{
+#start_btn{
 	margin-left: 400px;
 	margin-right: 350px;
 	margin-top: 20px;
