--- a/Assignments/Flashcard App/Final/start.css
+++ b/Assignments/Flashcard App/Final/start.css
@@ -10,7 +10,7 @@ h1{
 	font-weight: bold;
 }
 
-#card{
+#topicList{
 	margin-left: 400px;
 	margin-right: 350px;
 	padding: 30px;
@@ -18,12 +18,13 @@ h1{
 	box-shadow: 6px 7px 3px -4px rgba(0,0,0,0.4);
 	margin-top: 20px;
 	font-weight: bold; 
-	font-size: 25px;
+	font-size: 17px;
+	color: #909090;
 }
 	
-#card label{
-	font-size: 14px;
-	color: #909090;
+.card label{
+	font-size: 20px;
+	color: black;
 }
 #start_btn{
 	margin-left: 400px;
